src/main/java/com/example/authpoo/error/ApiError.java
package com.example.authpoo.error;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

@AllArgsConstructor
@NoArgsConstructor
@Getter
@Setter
public class ApiError {
    int status;
    String message;
    long timestamp;
    String path;
}